--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "16.4.2"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
